[gd_scene load_steps=2 format=3 uid="uid://do0bghpq3ii50"]

[ext_resource type="Script" uid="uid://xwo1k3kh21ri" path="res://elements/skill_node_edit/skill_node_edit.gd" id="1_kpdhl"]

[node name="SkillNodeEditModal" type="PanelContainer" node_paths=PackedStringArray("image_file_dialog", "file_path_input")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.5
offset_top = -137.5
offset_right = 190.5
offset_bottom = 137.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kpdhl")
image_file_dialog = NodePath("ImageFileDialog")
file_path_input = NodePath("ScrollContainer/MarginContainer/VBoxContainer/HSplitContainer/FilePathInput")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="KeyLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Skill Key"

[node name="KeyInput" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "e.g my_cool_skill"

[node name="ImageLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Image"

[node name="HSplitContainer" type="HSplitContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
dragging_enabled = false

[node name="FilePathInput" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Path to image ..."
editable = false

[node name="FilePathButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
text = "Select"

[node name="MaxPointsLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Max Points"

[node name="MaxPointsInput" type="SpinBox" parent="ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 999.0
value = 1.0
rounded = true
allow_greater = true

[node name="NeededPointsLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "The needed amount of points needed so that this skill node becomes available."
mouse_filter = 0
text = "Needed Neighbours Points Sum (?)"

[node name="NeededPointsInput" type="SpinBox" parent="ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 999.0
value = 1.0
rounded = true
allow_greater = true

[node name="Space" type="Control" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DeleteButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Delete"

[node name="ImageFileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png")
use_native_dialog = true

[connection signal="text_changed" from="ScrollContainer/MarginContainer/VBoxContainer/KeyInput" to="." method="_on_key_input_text_changed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/HSplitContainer/FilePathButton" to="." method="_on_file_path_button_pressed"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/VBoxContainer/MaxPointsInput" to="." method="_on_max_points_input_value_changed"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/VBoxContainer/NeededPointsInput" to="." method="_on_needed_points_input_value_changed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="file_selected" from="ImageFileDialog" to="." method="_on_image_file_dialog_file_selected"]
